--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,50 +1,66 @@
 <!DOCTYPE html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Project One</title>
+    <meta name="description" content="Project 1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./static/css/style.css">
+  </head>
+  <body>
+    <nav class="navbar">
+      <a class="navbar-brand" href="/">
+        <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+      </a>
+    </nav>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Project One</title>
-  <meta name="description" content="Project 1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./static/css/style.css">
-</head>
-
-<body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12 col-md-12 col-lg-12">
-        <div id="floating-panel">
-          <input id="origin-input" class="controls" type="text" placeholder="Enter an origin location">
-          <input id="destination-input" class="controls" type="text" placeholder="Enter a destination location">
-          <div id="mode-selector" class="controls">
-            <input type="radio" name="type" id="changemode-walking" checked="checked">
-            <label for="changemode-walking">Walking</label>
-
-            <input type="radio" name="type" id="changemode-transit">
-            <label for="changemode-transit">Transit</label>
-
-            <input type="radio" name="type" id="changemode-driving">
-            <label for="changemode-driving">Driving</label>
+    <div class="container-fluid">
+      <div class="row mt-4">
+        <div class="col-sm-12 col-md-6 offset-md-3">
+          <div class="jumbotron">
+            <h1 class="display-4">Parks N Stops</h1>
+            <p class="lead">Going somewhere? We'll keep you company with Parks and Stops!</p>
+            <img class="img-fluid" src="https://blog.assets.thediscoverer.com/2019/04/Sunrise-on-Yosemite-Valley--Yosemite-National-Park.jpg">
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div id="map"></div>
-  <div id="right-panel">
+    <div id = "form-container">
+      <div class = "row">
+        <div class = "col-3">
+        </div>
+        <div class = "col-6">
+          <form>
+            <div class="form-group">
+              <label>Origin</label>
+              <input class="form-control" id="origin" placeholder="Enter your Starting Point">
+            </div>
+            <div class="form-group">
+              <label>Destination</label>
+              <input class="form-control" id="destination" placeholder="Enter your Ending Destination">
+            </div>
+            <button type="submit" class="btn btn-primary" id="parks" id="point-of-interests" id="expedia">Get Route</button>
+            <button type="clear" class = "btn btn-primary">Clear</button>
+          </form>
+        </div>
+        <div class = "col-3">
+        </div>
+      </div>
+    </div>
 
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyuZSRDCipVfeSThHuwT_M2A0gXShIv4k&libraries=places&callback=initMap"
-    async defer></script>
-  <script src="./static/javascript/scripts.js"></script>
-</body>
+    <div id = "map-view"></div>
 
+    <div id= "p-o-i"></div>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="./static/javascript/scripts.js"></script>
+  </body>
 </html>
