added the ajax called to Natioal Parks API

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -27,6 +27,9 @@
 
             <input type="radio" name="type" id="changemode-driving">
             <label for="changemode-driving">Driving</label>
+
+            <button type="button" class="btn btn-primary" id="natParks">National Parks</button>
+            
           </div>
         </div>
       </div>
