--- a/public/html/index.html
+++ b/public/html/index.html
@@ -22,14 +22,14 @@
     </div>
   </div>
 
-  <div class="bg"></div>
-
-  <div class="container">
+  <!-- <div class="bg"></div>
+  <button type="button" class="btn btn-primary" id="natParks">National Parks</button> -->
+  <!-- <div class="container">
     <div class="row">
       <div class="col-12 col-md-12 col-lg-12">
-        <div id="floating-panel">
-          <input id="origin-input" class="controls" type="text" placeholder="Enter an origin location">
-          <input id="destination-input" class="controls" type="text" placeholder="Enter a destination location">
+        <div id="floating-panel"> -->
+          <!-- <input id="origin-input" class="controls" type="text" placeholder="Enter an origin location"> -->
+          <!-- <input id="destination-input" class="controls" type="text" placeholder="Enter a destination location">
           <div id="mode-selector" class="controls">
             <input type="radio" name="type" id="changemode-walking" checked="checked">
             <label for="changemode-walking">Walking</label>
@@ -40,19 +40,33 @@
             <input type="radio" name="type" id="changemode-driving">
             <label for="changemode-driving">Driving</label>
 
-            <button type="button" class="btn btn-primary" id="natParks">National Parks</button>
-            
+
+
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+<div class="row">
+  <div id="map" class="col-8 map-box"></div>
+    <div id="weather-box">
+    <!-- <div id="input-box"></div> -->
+      <!-- <div class="row">
+        <div class="col-12">
+          <div>
+            <input id="destination-input" class="controls" type="text" placeholder="Enter a destination location">
+          </div>
+        </div> -->
+      </div>
+    </div>
 
-  <div id="map"></div>
-  <div class="col-lg-4 col-md-6 col-sm-12" id="right-panel"></div>
-  <div class="col-lg-8 col-md-6 col-sm-12" id="parks-panel"></div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+</div>
+
+<div class="col-lg-4 col-md-6 col-sm-12" id="right-panel">right panel</div>
+<div class="col-lg-8 col-md-6 col-sm-12" id="parks-panel">parks panel</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
