--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Parks-N-Stops</title>
+
   <meta name="description" content="Project 1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
@@ -11,14 +12,21 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue-indigo.min.css">
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Noticia+Text" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Open+Sans+Condensed:300|Ruge+Boogie" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="./static/css/style.css">
+  <link rel="stylesheet" href="animate.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+
 </head>
+<link rel='shortcut icon' type='image/x-icon' href='../favicon.ico'>
 
 <body>
+    <div class= "opening-container">
+        <div class= "animated bounceInDown" id="logo" >Parks <img src='../static/images/favicon_io/android-chrome-192x192.png'> </n>Stops</div>
+        <p class="animated bounceInDown">Going somewhere? We have the parks and stops for you!</p>
+    </div>
 
   <div class="jumbotron jumbotron-fluid">
     <div class="container mdl-color-text--white">
