--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Parks-N-Stops</title>
-
   <meta name="description" content="Project 1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
@@ -12,21 +11,20 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue-indigo.min.css">
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Open+Sans+Condensed:300|Ruge+Boogie" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noticia+Text" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="./static/css/style.css">
   <link rel="stylesheet" href="animate.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-
 </head>
 <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico'>
-
 <body>
-    <div class= "opening-container">
+    <!-- <div class= "opening-container">
         <div class= "animated bounceInDown" id="logo" >Parks <img src='../static/images/favicon_io/android-chrome-192x192.png'> </n>Stops</div>
         <p class="animated bounceInDown">Going somewhere? We have the parks and stops for you!</p>
-    </div>
+    </div> -->
 
   <div class="jumbotron jumbotron-fluid">
     <div class="container mdl-color-text--white">
@@ -60,27 +58,14 @@
         <div id="floating-panel">
           <input id="origin-input" class="controls" type="text" placeholder="Enter an origin location">
           <input id="destination-input" class="controls" type="text" placeholder="Enter a destination location">
-          <div id="mode-selector" class="controls">
-            <input type="radio" name="type" id="changemode-walking" checked="checked">
-            <label for="changemode-walking">Walking</label>
+          <input hidden id="interest-point" class="controls" type="text" placeholder="Are you looking for something along the way?">
 
-            <input type="radio" name="type" id="changemode-transit">
-            <label for="changemode-transit">Transit</label>
-
-            <input type="radio" name="type" id="changemode-driving">
-            <label for="changemode-driving">Driving</label>
-
-            <button type="button" class="btn btn-primary" id="sign-in-btn">sign in</button>
-
-          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- <div id="map"></div>
-  <div class="col-lg-4 col-md-6 col-sm-12" id="right-panel"></div>
-  <div class="col-lg-8 col-md-6 col-sm-12" id="parks-panel"></div> -->
+
 
   <div class="container">
     <div class="row">
@@ -163,6 +148,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyuZSRDCipVfeSThHuwT_M2A0gXShIv4k&libraries=places&callback=initMap"
     async defer></script>
   <script src="./static/javascript/scripts.js"></script>
+  <script src="./static/javascript/routeboxer.js"></script>
 </body>
 
 </html>
